--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
 
         <section class="bg-[#0A192F] rounded-lg">
             <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
-                <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
-                    <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">Accommodations at Amanpulo</h2>
+                <div class="font-light text-gray-300 sm:text-lg dark:text-gray-300">
+                    <h2 class="mb-4 text-4xl tracking-tight font-bold text-white">Accommodations at Amanpulo</h2>
                     <p class="mb-4">Amanpulo’s Casitas and Villas blend luxury with nature, offering breathtaking ocean or garden views. Inspired by traditional Filipino design, each Casita features open-air layouts and wooden decks, while Villas provide private pools, beach access, and personal butler service.</p>
                     <p>Whether nestled in the treetops, along the hillside, or steps from the shore, every stay promises serenity and exclusivity in a tropical paradise.</p>
                 </div>
