--- a/src/accommodation.html
+++ b/src/accommodation.html
@@ -298,9 +298,9 @@
 
         <!-- Accommodation Gallery -->
         <section class="py-16 px-6">
-            <h2 class="text-4xl font-semibold text-center text-gray-900 dark:text-white">Explore Our Villas & Casitas
+            <h2 class="text-4xl font-semibold text-center text-white">Explore Our Villas & Casitas
             </h2>
-            <p class="text-base text-center text-gray-600 dark:text-gray-300 mt-4 max-w-3xl mx-auto">Set in the natural
+            <p class="text-base text-center text-gray-600 dark:text-gray-200 mt-4 max-w-3xl mx-auto">Set in the natural
                 seclusion of Pamalican Island's idyllic landscape, Amanpulo's Casitas and Villas are set on the
                 beachfront or ensconced within the forest canopy. The verdant landscape of age-old trees and dense
                 thicket cradles the spaces in complete privacy, providing plenty of opportunities to spend time together
@@ -312,7 +312,7 @@
         <section class="bg-[#0A192F]">
             <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
                 <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
-                    <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">Amanpulo's Villas & Casitas</h2>
+                    <h2 class="mb-4 text-4xl tracking-tight font-bold text-white">Amanpulo's Villas & Casitas</h2>
                     <p class="mb-4">The Casitas, inspired by traditional Filipino bahay kubo, are nestled along the beach, hillside, or treetops, each featuring elegant interiors, wooden decks, and stunning ocean or garden views.</p>
                     <p>For ultimate privacy and exclusivity, the Villas come with spacious living areas, private pools, direct beach access, and dedicated personal chefs and butlers. Designed for relaxation and seamless indoor-outdoor living, Amanpulo’s accommodations provide a tranquil retreat amidst breathtaking island scenery.</p>
                 </div>
