--- a/src/amenities-activities-f/Scuba.html
+++ b/src/amenities-activities-f/Scuba.html
@@ -124,12 +124,12 @@
 
         <section class="bg-[#0A192F]">
             <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
-                <div class="font-light text-gray-500 sm:text-lg dark:text-gray-400">
-                    <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">PADI courses</h2>
+                <div class="font-light text-gray-300 sm:text-lg dark:text-gray-300">
+                    <h2 class="mb-4 text-4xl tracking-tight font-bold text-white">PADI courses</h2>
                     <p class="mb-4">Overseen by PADI dive pros, Amanpulo offers everything from Bubble Maker Experiences for young adventurers and PADI’s flagship Open Water course, to Enriched Air Nitrox and Specialty Courses (including night and deep dives) for advanced divers. The one-hour Scuba Refresher course is ideal for instilling confidence after a break, while the Five-Day 
                         Programme is the perfect choice for certified divers wanting to maximise their time underwater during their stay. </p>
                     
-                        <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">Dive sites</h2>
+                        <h2 class="mb-4 text-4xl tracking-tight font-bold text-white">Dive sites</h2>
                         <p class="mb-4">With most sites less than 10 minutes away in the resort’s  custom-built speed boat, diving from Amanpulo is completely hassle-free, whether you’re diving with a group or your own personal dive master. Friendly batfish, sergeants, wrasses and parrotfish await amidst the hard and soft corals of the House Reef, while Rocky Cove is known for its large schools of jackfish, trevallies and fusiliers. Then there’s 
                             The Pier, South Point, West Villa Reef and Casita 40, all with their own unique attractions. </p>
                 </div>
@@ -149,14 +149,14 @@
                     <!-- Text Content -->
                     <div>
                         <p class="text-base font-semibold text-gray-300">Dive Centre</p>
-                        <h2 class="mt-2 text-4xl font-semibold text-gray-900 dark:text-white leading-tight">
+                        <h2 class="mt-2 text-4xl font-semibold text-white leading-tight">
                             A Seamless Diving Experience
                         </h2>
-                        <p class="mt-4 text-lg text-gray-700 dark:text-gray-400 mb-4">
+                        <p class="mt-4 text-lg text-gray-300 dark:text-gray-300 mb-4">
                             Discover the underwater world of Amanpulo with expert-led diving experiences. 
                             Whether you are a beginner or a seasoned diver, we ensure a smooth and memorable experience.
 
-                            <p class="mt-4 text-lg text-gray-700 dark:text-gray-400">
+                            <p class="mt-4 text-lg text-gray-300 dark:text-gray-300">
                             Positioned on the island’s north-western shoreline just back from the beach, 
                             Amanpulo’s spacious, fully staffed Dive Centre offers a professional, safe, and welcoming environment in which to learn the ropes or relax with refreshments between dives. All equipment provided is of the highest quality.</p>
                         </p>
