--- a/src/amenities.html
+++ b/src/amenities.html
@@ -196,6 +196,7 @@
             <!-- Footer Bottom -->
             <div class="sm:flex sm:items-center sm:justify-between">
                 <span class="text-sm text-gray-500 dark:text-gray-400">
+                    <p class="text-black">Student: Iriz Claire Hagosojos</p>
                     © 2025 Amanpulo. All rights reserved.
                 </span>
                 <div class="flex space-x-6">
